fix: align landing page

--- a/m3-nu-kenzie/src/App.css
+++ b/m3-nu-kenzie/src/App.css
@@ -40,13 +40,14 @@
 
 body {
   height: 100vh;
-  width: 100vw;
   background-color: var(--color-grey-4);
+  display: flex;
+  justify-content: center;
 }
 
 .App {
   height: 100%;
-  width: 100%;
+  width: 100vw;
   font-family: var(--font-family-df);
 }
 
